syntax = "proto3";

import "proto.proto";

option java_package = "org.bitlap.network.driver";
option java_multiple_files = true;
option java_outer_classname = "DriverService";

service DriverService {

  rpc OpenSession (BOpenSession.BOpenSessionReq) returns (BOpenSession.BOpenSessionResp) {}

  rpc CloseSession (BCloseSession.BCloseSessionReq) returns (BCloseSession.BCloseSessionResp) {}

  rpc ExecuteStatement (BExecuteStatement.BExecuteStatementReq) returns (BExecuteStatement.BExecuteStatementResp) {}

  rpc FetchResults (BFetchResults.BFetchResultsReq) returns (BFetchResults.BFetchResultsResp) {}

  rpc GetSchemas (BGetSchemas.BGetSchemasReq) returns (BGetSchemas.BGetSchemasResp) {}

  rpc GetTables (BGetTables.BGetTablesReq) returns (BGetTables.BGetTablesResp) {}

  rpc GetColumns (BGetColumns.BGetColumnsReq) returns (BGetColumns.BGetColumnsResp) {}

  rpc GetResultSetMetadata (BGetResultSetMetadata.BGetResultSetMetadataReq) returns (BGetResultSetMetadata.BGetResultSetMetadataResp) {}

  rpc GetLeader (BGetRaftMetadata.BGetLeaderReq) returns (BGetRaftMetadata.BGetLeaderResp) {}

}